# blender-mcp-sandbox

./: .gitignore  .mcp.json  CLAUDE.md  README.md  Untitled.blend  Untitled.blend1  flake.nix  image_to_3d_utils.py  main.py  pyproject.toml  tokyo_house_design_2024.md
